--- a/server/server.csproj
+++ b/server/server.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>892a7cbe-bc08-43ac-881b-b6c51cd68eaa</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
